MARP-810: german translation for detail page with missing sections (#101)